--- a/.bit/responses/3.5-Week 3 Step 5.md
+++ b/.bit/responses/3.5-Week 3 Step 5.md
@@ -29,7 +29,7 @@ To test your work, use Postman to send a GET request with a "username" in the he
 ```JSON
 {
   "body" : {
-     "downloadUri" : "https://<YOUR_BLOB_STORAGE_URL>.blob.core.windows.net/images/<USERNAME>.png",
+     "downloadUri" : "https://<YOUR_STORAGE_ACCOUNT_NAME>.blob.core.windows.net/images/<USERNAME>.png",
      "success": true
   }
 }
