--- a/.bit/responses/3.8-Week 3 Step 8.md
+++ b/.bit/responses/3.8-Week 3 Step 8.md
@@ -21,10 +21,10 @@ Modify the `deepsecrets` Azure Function to
 ```
 Thanks 😊! Stored your secret "insert_user's_message". 😯 Someone confessed that: "a_random_secret"
 ```
-
+> Remember that the bot will be checking the response, so make sure you use the same emojis, punctuation, wording, and capitalization! Only the messages can be different.
 ## 🚧 Test Your Work
 
-To test your work, send your Twilio number a text message. You should still receive a text back that contains a message similar to the one below, but now the second secret returned will be random, and no longer the most recent secret stored!
+To test your work, send your Twilio number a text message. You should still receive a text back that contains a message with the **same format and wording** as the one below, but now the second secret returned will be random, and no longer the most recent secret stored!
 
 ```
 Thanks 😊! Stored your secret "insert_user's_message". 😯 Someone confessed that: "a_random_secret"
